# chat-with-docs

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  exceptions.py  logging.py  models.py
app/graph/: nodes.py  pipeline.py  prompts.py  state.py
app/guardrails/: input_guard.py  output_guard.py
app/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  vector_store.py
app/retrieval/: hybrid.py  reranker.py
tests/evaluation/: golden_set.py  test_ragas_eval.py
tests/unit/: test_chunker.py  test_guardrails.py
ui/: app.py
