[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "chat-with-docs"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "langchain>=0.2.12",
    "langchain-core>=0.2.34",
    "langchain-openai>=0.1",
    "langchain-experimental>=0.0.60",
    "langchain-text-splitters>=0.2",
    "langgraph>=0.1.20,<1.0.0",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7,<3.0",
    "rank-bm25>=0.2",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "structlog>=24.1",
    "streamlit>=1.35",
    "ragas>=0.1",
    "datasets>=2.19",
    "python-multipart>=0.0.9",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "rebuff>=0.0.1",
    "transformers>=4.41",
    "torch>=2.2",
    "sentencepiece>=0.1.99",
    "tenacity>=8.3",
    "fastembed>=0.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",   # for FastAPI TestClient
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "evaluation: marks tests that require live LLM + Qdrant (deselect with -m 'not evaluation')",
]
addopts = "-v --cov=app --cov-report=term-missing -m 'not evaluation'"

[tool.coverage.run]
omit = ["tests/*", "ui/*"]
